--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Zeljko Obradovic - Tribute</title>
 </head>
 <body>
-    <h1>Ovo je goat evropske košarke.</h1>
+    <h1>Ovo je goat evropske košarke majke mi.</h1>
 </body>
 </html>
